--- a/template2.html.j2
+++ b/template2.html.j2
@@ -40,7 +40,10 @@
                     <div class="timestamp">{{ message.created_at.strftime('%Y-%m-%d %H:%M:%S')}} UTC</div>
                 </div>
                 <div class="bottom-row">
-                    <div class="message-content">{{ emby.description }}</div>
+                    <div>
+                        {% if emby.title %}<h4>{{ emby.title }}</h4>{% endif %}
+                        <span class="message-content">{{ emby.description }}</span>
+                    </div>
                     {% for attachment in message.attachments %}
                         {% if 'image' in attachment.content_type %}
                         <img src="{{ attachment.proxy_url }}" alt="{{ attachment.filename }}">
@@ -133,7 +136,8 @@
             <div class="message-flex">
                 <div class="top-row"></div>
                 <div class="bottom-row">
-                    {{ emby.description | safe }}
+                    {% if emby.title %}<h4>{{ emby.title }}</h4>{% endif %}
+                    <span class="message-content">{{ emby.description | safe }}</span>
                 </div>
             </div>
         </div>
